@@ -60,7 +60,14 @@ Other Changes:
 - InputText:
   - Shift+Enter in multi-line editor always adds a new line, regardless of
     ImGuiInputTextFlags_CtrlEnterForNewLine being set or not. (#9239)
-- Style: border sizes are now scaled (and rounded) by ScaleAllSizes().
+- Style:
+  - Border sizes are now scaled (and rounded) by ScaleAllSizes().
+  - When using large values with ScallAllSizes(), the following items thickness
+    are scaled to integer amounts:
+    - InputText Caret/cursor thickness. (#7031)
+    - CloseButton() thickness.
+    - TextLink() underline thickness.
+    - ColorButton() border.
 - Demo: fixed IMGUI_DEMO_MARKER locations for examples applets. (#9261, #3689) [@pthom]
 - Clipper:
   - Clear `DisplayStart`/`DisplayEnd` fields when `Step()` returns false.
